--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - itk 4.11*
     - jpeg
     - libtiff
-    - hdf5 1.8.17
+    - hdf5
     - libpng 1.6.28
 
   run:
@@ -40,7 +40,7 @@ requirements:
     - jpeg
     - libtiff
     - libpng >=1.6.28
-    - hdf5 1.8.17
+    - hdf5
 
 test:
   imports:
