added libitk to dependencies
also added to test (as it is needed)

furthermore:
 * renamed the test project to _test. Naming it test produced a cmake warning.
 * removed specific ITK_DIR variable
 * removed NO_DEFAULT_PATH in find_package -> find_package works fine with
   libitk from conda

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -29,6 +29,7 @@ requirements:
     - itk
     - jpeg
     - libtiff
+    - libitk
     - hdf5
     - libpng 1.6.28
 
@@ -41,6 +42,7 @@ requirements:
     - libtiff
     - libpng >=1.6.28
     - hdf5
+    - libitk
 
 test:
   imports:
